--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
       </h2>
     <!-- </div> -->
     <div class="container">
-        <ul id="box"></ul>
-           <input type="text" class="text" id="name" />
-           <input type="button" class="button" id="btn" value="Add" onclick="addmore()"/>
-           <br><br>
-        <span class="error" id="error"></span>
+        <!-- <ul id="box"></ul> -->
+           <input type="text" class="text" id="inputField"><button id="addToDo" class="button">Add</button>
+           <!-- <input id="inputField" type="text"><button id="addToDo">+</button> -->
+           <!-- <input type="button" class="button" id="addToDo" value="Add"/> -->
+           <!-- <br><br> -->
+           <div class="to-dos" id="toDoContainer"></div>
+        </div>
+        <!-- <span class="error" id="error"></span> -->
     </div>
 
     <script src="script.js"></script>
@@ -27,3 +30,22 @@
 </body>
 
 </html>
+<!-- new -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>To Do List</title>
+</head>
+<body>
+    <h1>To Do List</h1>
+    <div class="container">
+        <input id="inputField" type="text"><button id="addToDo">+</button>
+        <div class="to-dos" id="toDoContainer">
+        </div>
+    </div>
+    <script src="main.js"></script>
+</body>
+</html> -->
